feat(core): implement Path extractor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["andrewdhazlett <andrew@hazlett.me>"]
 
 [dependencies]
 actix = "^0.5"
+serde = "^1.0"
+serde_derive = "^1.0"
 
 [dependencies.actix-web]
 version = "^0.6"
