--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ serde_derive = "^1.0"
 [dependencies.actix-web]
 version = "^0.6"
 default-features = false
+
+[dependencies.clippy]
+version = "*"
+optional = true
