feature(todos): POSTing a todo creates a url to GET it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ authors = ["andrewdhazlett <andrew@hazlett.me>"]
 actix = "^0.5"
 serde = "^1.0"
 serde_derive = "^1.0"
-uuid = "^0.6"
 
 [dependencies.actix-web]
 version = "^0.6"
@@ -16,3 +15,7 @@ default-features = false
 [dependencies.clippy]
 version = "*"
 optional = true
+
+[dependencies.uuid]
+version = "^0.6"
+features = ["v5"]
